# bezier-animation

./: .gitignore  readme.md
src/: CMakeLists.txt
src/gui/: mainwindow.ui
src/include/Commands/: Command.h  Draw.h  Move.h
src/include/Model/: BrownStages.h  Facade.h  Model.h  brownstages.h  model.h
src/include/Model/Drawer/: Drawer.h  OpenGLDrawer.h
src/include/Model/Managers/: DrawManager.h  Manager.h  MoveManager.h  movemanager.h
src/include/View/: OpenGLWidget.h  mainwindow.h
src/source/: main.cc
src/source/Commands/: Draw.cc  Move.cc
src/source/Model/: Facade.cc  Model.cc  model.cpp
src/source/Model/Drawer/: OpenGLDrawer.cc
src/source/Model/Managers/: DrawManager.cc  MoveManager.cc  movemanager.cpp
src/source/View/: OpenGLWidget.cc  mainwindow.cc
